// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App component > Render home page 1`] = `
<div>
  <div
    class="app"
  >
    <header>
      <h1>
        WAXDISC
      </h1>
      <nav>
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
      <button>
        Test cart
      </button>
    </header>
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`App component > Visit cart page 1`] = `
<div>
  <div
    class="app"
  >
    <header>
      <h1>
        WAXDISC
      </h1>
      <nav>
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
      <button>
        Test cart
      </button>
    </header>
    <p>
      This will show the shopping cart
    </p>
  </div>
</div>
`;

exports[`App component > Visit home page 1`] = `
<div>
  <div
    class="app"
  >
    <header>
      <h1>
        WAXDISC
      </h1>
      <nav>
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
      <button>
        Test cart
      </button>
    </header>
    <p>
      Loading...
    </p>
  </div>
</div>
`;

exports[`App component > Visit non-existent page 1`] = `
<div>
  <p>
    I think you might be lost 🧐
  </p>
</div>
`;

exports[`App component > Visit shop page 1`] = `
<div>
  <div
    class="app"
  >
    <header>
      <h1>
        WAXDISC
      </h1>
      <nav>
        <ul>
          <li>
            <a
              data-discover="true"
              href="/"
            >
              Home
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/shop"
            >
              Shop
            </a>
          </li>
          <li>
            <a
              data-discover="true"
              href="/cart"
            >
              Cart
            </a>
          </li>
        </ul>
      </nav>
      <button>
        Test cart
      </button>
    </header>
    <p>
      Loading...
    </p>
  </div>
</div>
`;
